--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,10 @@
 {
-    "group_id": "634253191",
+    "group_id": "",
     "丹药领取时间": "06:00",
     "签到时间": "07:00",
     "owner_id": [
-        "2396276021"
+        ""
     ],
-    "name": " ",
-    "炼丹与行情辅助":[761433933,769376338,634253191]
+    "name": "1",
+    "炼丹与行情辅助":[]
 }
